@@ -1055,6 +1055,30 @@ comment|// get Analyzer from superclass and tokenize the terms
 name|TokenStream
 name|source
 init|=
+literal|null
+decl_stmt|;
+name|CharTermAttribute
+name|termAtt
+init|=
+literal|null
+decl_stmt|;
+name|boolean
+name|multipleTokens
+init|=
+literal|false
+decl_stmt|;
+if|if
+condition|(
+name|part1
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// part1
+try|try
+block|{
+name|source
+operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
@@ -1068,10 +1092,9 @@ argument_list|(
 name|part1
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|CharTermAttribute
+expr_stmt|;
 name|termAtt
-init|=
+operator|=
 name|source
 operator|.
 name|addAttribute
@@ -1080,15 +1103,11 @@ name|CharTermAttribute
 operator|.
 name|class
 argument_list|)
-decl_stmt|;
-name|boolean
+expr_stmt|;
 name|multipleTokens
-init|=
+operator|=
 literal|false
-decl_stmt|;
-comment|// part1
-try|try
-block|{
+expr_stmt|;
 if|if
 condition|(
 name|source
@@ -1158,6 +1177,14 @@ literal|" - tokens were added to part1"
 argument_list|)
 throw|;
 block|}
+block|}
+if|if
+condition|(
+name|part2
+operator|!=
+literal|null
+condition|)
+block|{
 comment|// part2
 name|source
 operator|=
@@ -1256,6 +1283,7 @@ operator|+
 literal|" - tokens were added to part2"
 argument_list|)
 throw|;
+block|}
 block|}
 return|return
 name|super
