@@ -1958,6 +1958,16 @@ name|jj_gen
 expr_stmt|;
 empty_stmt|;
 block|}
+name|boolean
+name|startOpen
+init|=
+literal|false
+decl_stmt|;
+name|boolean
+name|endOpen
+init|=
+literal|false
+decl_stmt|;
 if|if
 condition|(
 name|goop1
@@ -1990,6 +2000,24 @@ literal|1
 argument_list|)
 expr_stmt|;
 block|}
+elseif|else
+if|if
+condition|(
+literal|"*"
+operator|.
+name|equals
+argument_list|(
+name|goop1
+operator|.
+name|image
+argument_list|)
+condition|)
+block|{
+name|startOpen
+operator|=
+literal|true
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|goop2
@@ -2020,6 +2048,24 @@ argument_list|()
 operator|-
 literal|1
 argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+literal|"*"
+operator|.
+name|equals
+argument_list|(
+name|goop2
+operator|.
+name|image
+argument_list|)
+condition|)
+block|{
+name|endOpen
+operator|=
+literal|true
 expr_stmt|;
 block|}
 name|q
@@ -2028,6 +2074,10 @@ name|getRangeQuery
 argument_list|(
 name|field
 argument_list|,
+name|startOpen
+condition|?
+literal|null
+else|:
 name|discardEscapeChar
 argument_list|(
 name|goop1
@@ -2035,6 +2085,10 @@ operator|.
 name|image
 argument_list|)
 argument_list|,
+name|endOpen
+condition|?
+literal|null
+else|:
 name|discardEscapeChar
 argument_list|(
 name|goop2
