@@ -502,7 +502,18 @@ name|lowerTerm
 operator|!=
 literal|null
 condition|?
+operator|(
+literal|"*"
+operator|.
+name|equals
+argument_list|(
 name|lowerTerm
+argument_list|)
+condition|?
+literal|"\\*"
+else|:
+name|lowerTerm
+operator|)
 else|:
 literal|"*"
 argument_list|)
@@ -522,7 +533,18 @@ name|upperTerm
 operator|!=
 literal|null
 condition|?
+operator|(
+literal|"*"
+operator|.
+name|equals
+argument_list|(
 name|upperTerm
+argument_list|)
+condition|?
+literal|"\\*"
+else|:
+name|upperTerm
+operator|)
 else|:
 literal|"*"
 argument_list|)
