@@ -3662,6 +3662,42 @@ argument_list|,
 literal|"gack (bar blar {a TO z})"
 argument_list|)
 expr_stmt|;
+name|assertQueryEquals
+argument_list|(
+literal|"[* TO Z]"
+argument_list|,
+literal|null
+argument_list|,
+literal|"[* TO z]"
+argument_list|)
+expr_stmt|;
+name|assertQueryEquals
+argument_list|(
+literal|"[A TO *]"
+argument_list|,
+literal|null
+argument_list|,
+literal|"[a TO *]"
+argument_list|)
+expr_stmt|;
+name|assertQueryEquals
+argument_list|(
+literal|"[* TO *]"
+argument_list|,
+literal|null
+argument_list|,
+literal|"[* TO *]"
+argument_list|)
+expr_stmt|;
+name|assertQueryEquals
+argument_list|(
+literal|"[\\* TO \"*\"]"
+argument_list|,
+literal|null
+argument_list|,
+literal|"[\\* TO \\*]"
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testFarsiRangeCollating
 specifier|public
