@@ -914,26 +914,8 @@ name|parser
 argument_list|,
 name|sf
 argument_list|,
-literal|"*"
-operator|.
-name|equals
-argument_list|(
-name|part1
-argument_list|)
-condition|?
-literal|null
-else|:
 name|part1
 argument_list|,
-literal|"*"
-operator|.
-name|equals
-argument_list|(
-name|part2
-argument_list|)
-condition|?
-literal|null
-else|:
 name|part2
 argument_list|,
 name|startInclusive
